tests/baselines/reference/parserArrowFunctionExpression9(target=es3).errors.txt
error TS5107: Option 'target=ES3' is deprecated and will stop functioning in TypeScript 5.5. Specify compilerOption '"ignoreDeprecations": "5.0"' to silence this error.
fileJs.js(1,1): error TS2304: Cannot find name 'b'.
fileJs.js(1,6): error TS2304: Cannot find name 'c'.
fileJs.js(1,16): error TS2304: Cannot find name 'e'.
fileTs.ts(1,1): error TS2304: Cannot find name 'b'.
fileTs.ts(1,6): error TS2304: Cannot find name 'c'.
fileTs.ts(1,16): error TS2304: Cannot find name 'e'.


!!! error TS5107: Option 'target=ES3' is deprecated and will stop functioning in TypeScript 5.5. Specify compilerOption '"ignoreDeprecations": "5.0"' to silence this error.
==== fileJs.js (3 errors) ====
    b ? (c) : d => e // Legal JS
    ~
!!! error TS2304: Cannot find name 'b'.
         ~
!!! error TS2304: Cannot find name 'c'.
                   ~
!!! error TS2304: Cannot find name 'e'.
    
==== fileTs.ts (3 errors) ====
    b ? (c) : d => e
    ~
!!! error TS2304: Cannot find name 'b'.
         ~
!!! error TS2304: Cannot find name 'c'.
                   ~
!!! error TS2304: Cannot find name 'e'.
    